Remove sticky sidebar due to responsiveness issues on small screens (#77)

--- a/docs/_static/css/style.css
+++ b/docs/_static/css/style.css
@@ -7,9 +7,3 @@
 .container-xl {
   max-width: 1600px !important;
 }
-
-/* Make sidebar sticky */
-
-.bd-sidebar {
-  position: sticky !important;
-}
